<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:padding="15dp"
        android:textAllCaps="true"
        android:text="@string/instruction" />

    <TextView
        android:id="@+id/instruction1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/instr_explanation" />

    <TextView
        android:id="@+id/instruction2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/instr_route" />

    <TextView
        android:id="@+id/instruction3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/instr_dialer" />

    <TextView
        android:id="@+id/instruction4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/instr_preferences" />

    <TextView
        android:id="@+id/instruction5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instr_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/start"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/oval_button"
            android:text="@string/begin"
            android:textColor="#FFF" />
    </LinearLayout>

</LinearLayout>