<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:padding="15dp"
            android:textAllCaps="true"
            android:text="@string/tv_preferences" />

        <Button
            android:id="@+id/instructions"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/oval_button"
            android:textColor="#FFF"
            android:text="instructies"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="3dp"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/tv_username" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#727272"
            android:hint="@string/username"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/fb_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:text="@string/fb_username" />

        <TextView
            android:id="@+id/fb_username2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:text="@string/fb_username_2" />

        <TextView
            android:id="@+id/tv_diets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/tv_diets" />

        <TextView
            android:id="@+id/fb_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/colorPrimary"
            android:text="@string/fb_preferences" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/vegetarian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:textColor="#727272"
                android:text="@string/vegetarian" />

            <CheckBox
                android:id="@+id/vegan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:textColor="#727272"
                android:text="@string/vegan" />

            <CheckBox
                android:id="@+id/biological"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:textColor="#727272"
                android:text="@string/biological" />

            <CheckBox
                android:id="@+id/glutenfree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:textColor="#727272"
                android:text="@string/gluten_free" />

            <CheckBox
                android:id="@+id/lactosefree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:textColor="#727272"
                android:text="@string/lactose_free" />

            <CheckBox
                android:id="@+id/sugarfree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:textColor="#727272"
                android:text="@string/sugar_free" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_button_secondary"
            android:textColor="#FFF"
            android:text="@string/cancel"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_button"
            android:textColor="#FFF"
            android:text="@string/save"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="3dp"/>
    </LinearLayout>
</LinearLayout>