<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:gravity="center"
        android:padding="15dp"
        android:textAllCaps="true"
        android:text="@string/welcome_message" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/fb_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:text="@string/fb_username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/fb_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:text="@string/fb_password" />

    <TextView
        android:id="@+id/fb_failed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/colorPrimary"
        android:text="@string/fb_failed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:gravity="center" >

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_button_secondary"
            android:textColor="#FFF"
            android:text="@string/register"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_button"
            android:textColor="#FFF"
            android:text="@string/login"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>