<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:padding="15dp"
            android:textAllCaps="true"
            android:text="@string/register" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_and_password" />


        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#727272"
            android:hint="@string/username" />

        <TextView
            android:id="@+id/FBusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#727272"
            android:hint="e-mail" />

        <TextView
            android:id="@+id/FBemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#727272"
            android:hint="@string/password"/>

        <TextView
            android:id="@+id/FBpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <!--<TextView
            android:id="@+id/kitchens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="Preferred kitchens:" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/american"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:text="american" />

            <CheckBox
                android:id="@+id/greek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:text="greek" />

            <CheckBox
                android:id="@+id/italian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:text="italian" />

            <CheckBox
                android:id="@+id/thai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:text="thai" />

            <CheckBox
                android:id="@+id/dutch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:text="dutch" />

            <CheckBox
                android:id="@+id/tapas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:text="tapas" />

            <CheckBox
                android:id="@+id/french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/checkBoxTheme"
                android:text="french" />

        </LinearLayout>-->

        <TextView
            android:id="@+id/diets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/preferences" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" >

        <CheckBox
            android:id="@+id/vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/checkBoxTheme"
            android:textColor="#727272"
            android:text="@string/vegetarian" />

        <CheckBox
            android:id="@+id/biological"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/checkBoxTheme"
            android:textColor="#727272"
            android:text="@string/biological" />

        <CheckBox
            android:id="@+id/glutenfree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/checkBoxTheme"
            android:textColor="#727272"
            android:text="@string/gluten_free" />

        <CheckBox
            android:id="@+id/lactosefree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/checkBoxTheme"
            android:textColor="#727272"
            android:text="@string/lactose_free" />

        <CheckBox
            android:id="@+id/sugarfree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/checkBoxTheme"
            android:textColor="#727272"
            android:text="@string/sugar_free" />
    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_button_secondary"
            android:textColor="#FFF"
            android:text="@string/cancel"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="3dp"/>

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/oval_button"
            android:textColor="#FFF"
            android:text="@string/confirm"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="3dp"/>
    </LinearLayout>
</LinearLayout>